--- a/templates/500.html
+++ b/templates/500.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <div class="d-flex align-items-center justify-content-center" style="margin-bottom: 10%;">
+            <div class="d-flex align-items-center justify-content-center" style="margin-top: 15%;">
                 <div class="text-center">
                     <h1 class="display-1 fw-bold">500</h1>
                     <p class="fs-3"> <span class="text-danger">Opps!</span> Internal Server error !</p>
